--- a/sass/modules/breadcrumb/_breadcrumb.scss
+++ b/sass/modules/breadcrumb/_breadcrumb.scss
@@ -60,6 +60,7 @@
     flex-direction: column;
     justify-content: start;
     align-items: start;
+    padding:  0 14px;
   }
 }
 .breadcrumb-list {
