--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -3,7 +3,7 @@
         &.style-1{
             .section-title{
                 @include sm{
-                    padding: 0 12px;
+                    padding: 0 12px !important;
                 }
             }
         }
