--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -354,6 +354,9 @@
     @include rmaxwd(1024) {
       justify-content: flex-start;
     }
+    @include sm{
+      gap: 0 10px;
+    }
 
     li {
       a {
